FIX #785 - new reset password workflow

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -545,6 +545,9 @@
     "account.reset.error.user.not.found": "Your account is not found. Please create a new one.",
     "password.reset.done": "You will receive an email at %s to finish your passsword reset process. You will have 15 minutes from now to finish your password reset process.",
     "password.reset.successfull": "Your passsword has been successfully reset. You can now login.",
+    "password.reset.error.invalid": "An error occurred. Please check the link or try again.",
+    "password.reset.error.expires": "This link is no longer valid. Please restart the password reset process.",
+    "password.reset.error.unknown.user": "The email address provided does not match the password reset request.",
     "Create your account": "Create your account",
     "Reset your password": "Reset your password",
     "Connect to your account": "Connect to your account",
