--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -545,6 +545,9 @@
   "account.reset.error.user.not.found": "Votre compte n'existe plus. Merci d'en créer un nouveau.",
   "password.reset.done": "Vous recevrez un courrier électronique à l'adresse %s pour terminer le processus de réinitialisation de votre mot de passe. Vous aurez 15 minutes à partir de maintenant pour terminer votre processus de réinitialisation de mot de passe.",
   "password.reset.successfull": "Votre mot de passe a été réinitialisé avec succès. Vous pouvez maintenant vous connecter.",
+  "password.reset.error.invalid": "Une erreur est survenue. Veuillez vérifier le lien ou réessayer.",
+  "password.reset.error.expires": "Ce lien n'est plus valide. Veuillez recommencer la procédure de réinitialisation.",
+  "password.reset.error.unknown.user": "L’adresse e-mail saisie ne correspond pas à la demande de réinitialisation.",
   "Create your account": "Créer un compte",
   "Reset your password": "Réinitialisation votre mot de passe",
   "Connect to your account": "Se connecter",
