--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1639,6 +1639,13 @@
   "notification.page.status.accepted.label": "Approuvée",
   "notification.page.status.pending.label": "En cours",
   "notification.page.status.rejected.label": "Rejetée",
+  "notifications.page.table.header.label.api": "API",
+  "notifications.page.table.header.label.type": "Type",
+  "notifications.page.table.header.label.description": "Description",
+  "notifications.page.table.header.label.team": "Équipe",
+  "notifications.page.table.header.label.sender": "Source",
+  "notifications.page.table.header.label.date": "Date",
+  "notifications.page.table.header.label.actions": "Actions",
   "tenant.edit.clientNamePattern.label": "Modèle de nom de client personnalisé",
   "tenant.edit.clientNamePattern.help": "Ce modèle est utilisé pour personnaliser le nom du client lors de la création d'une clé d'API. La chaîne de caractères peut contenir des valeurs dynamiques en utilisant la syntaxe ${ma.valeur}.",
   "tenant.edit.clientNamePattern.help2": "Les valeurs disponibles sont les suivantes :"
