--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1650,6 +1650,17 @@
     "notifications.page.table.header.label.actions": "Actions",
     "tenant.edit.clientNamePattern.label": "Custom client name pattern",
     "tenant.edit.clientNamePattern.help": "This pattern is used to customize the client name when creating an API key. The string can include dynamic values using the ${my.value} syntax.",
-    "tenant.edit.clientNamePattern.help2": "The following values are available:"
-
+    "tenant.edit.clientNamePattern.help2": "The following values are available:",
+    "tenant.security.account.creation.process.button.label": "Customize the account creation process",
+    "tenant.security.account.creation.process.doc.title": "Account creation process configuration",
+    "tenant.security.account.creation.process.doc.intro": "Define the steps that make up the account creation process. You can add, remove, or reorder steps.",
+    "tenant.security.account.creation.process.doc.step.form": "Displays a configurable form to be filled out during the account request.",
+    "tenant.security.account.creation.process.doc.step.email": "Sends an email for validation. If the title contains \"confirmation\", the email is used to validate the address (${form.email} as recipient).",
+    "tenant.security.account.creation.process.doc.step.http": "Sends all contextual data to an external webhook for validation.",
+    "tenant.security.account.creation.process.doc.step.admin": "Notifies the tenant administrators for manual approval.",
+    "tenant.security.account.creation.process.doc.footer": "Use a default workflow",
+    "tenant.security.account.creation.process.doc.default.workflow": "form → confirmation mail",
+    "tenant.security.account.creation.process.doc.default.workflow.admin": "form → confirmation mail → admin validation",
+    "tenant.security.account.creation.process.doc.close.aria": "Close documentation",
+    "tenant.security.account.creation.process.doc.open.aria": "Show la documentation"
 }
