FIX #873 - replace test connection button with a feedback button

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1662,5 +1662,9 @@
     "tenant.security.account.creation.process.doc.default.workflow": "form → confirmation mail",
     "tenant.security.account.creation.process.doc.default.workflow.admin": "form → confirmation mail → admin validation",
     "tenant.security.account.creation.process.doc.close.aria": "Close documentation",
-    "tenant.security.account.creation.process.doc.open.aria": "Show la documentation"
+    "tenant.security.account.creation.process.doc.open.aria": "Show la documentation",
+    "tenant.settings.mailer.mailgun.test.recipient.email.label": "Recipient email (for test only)",
+    "tenant.settings.mailer.test.connection.button.label": "Test connection",
+    "tenant.settings.mailer.test.connection.success.label": "Test coonection succeeded",
+    "tenant.settings.mailer.test.connection.failed.label": "Test connection failed"
 }
