--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1663,5 +1663,9 @@
   "tenant.security.account.creation.process.doc.default.workflow": "form → mail de confirmation",
   "tenant.security.account.creation.process.doc.default.workflow.admin": "form → mail de confirmation → validation admin",
   "tenant.security.account.creation.process.doc.close.aria": "Fermer la documentation",
-  "tenant.security.account.creation.process.doc.open.aria": "Voir la documentation"
+  "tenant.security.account.creation.process.doc.open.aria": "Voir la documentation",
+  "tenant.settings.mailer.mailgun.test.recipient.email.label": "Destinataire du mail de test",
+  "tenant.settings.mailer.test.connection.button.label": "Tester la connexion",
+  "tenant.settings.mailer.test.connection.success.label": "Test de connexion réussi",
+  "tenant.settings.mailer.test.connection.failed.label": "Test de connexion échoué"
 }
