--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1649,7 +1649,9 @@
   "notifications.page.table.header.label.sender": "Source",
   "notifications.page.table.header.label.date": "Date",
   "notifications.page.table.header.label.actions": "Actions",
-  "tenant.edit.clientNamePattern.label": "Modèle de nom de client personnalisé",
+  "notifications.page.account.creation.attempt.detail.button.label": "Voir plus",
+  "notifications.page.account.creation.attempt.detail.modal.title": "Détail de la demande de création de compte",
+  "tenant.edit.clientNamePattern.label" : "Modèle de nom de client personnalisé",
   "tenant.edit.clientNamePattern.help": "Ce modèle est utilisé pour personnaliser le nom du client lors de la création d'une clé d'API. La chaîne de caractères peut contenir des valeurs dynamiques en utilisant la syntaxe ${ma.valeur}.",
   "tenant.edit.clientNamePattern.help2": "Les valeurs disponibles sont les suivantes :",
   "tenant.security.account.creation.process.button.label": "Personnaliser le processus de création de comptes",
