update message from signup page

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -541,7 +541,8 @@
     "Confirm password": "Confirm password",
     "Create account": "Create account",
     "account.creation.error.not.valid.anymore": "Your account creation request is not valid anymore (it's only valid for 15 minutes). Please creates a new request.",
-    "create.account.done": "You will receive an email at %s to finish your account creation process. You will have 15 minutes from now to finish your account creation process.",
+    "create.account.alert.title": "Account confirmation required",
+    "create.account.done": "An email has been sent to %s to finish your account creation process. Follow the link inside to finish creating your account (valid for 15 minutes).",
     "Missing informations ...": "Missing informations ...",
     "password.match.error": "Your passwords does not match!",
     "password.empty.error": "Your password can't be empty",
