--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -541,7 +541,8 @@
   "Confirm password": "Mot de passe de confirmation",
   "Create account": "Création d'un compte",
   "account.creation.error.not.valid.anymore": "Votre demande de création de compte n'est plus valide (elle n'est valable que pendant 15 minutes). Merci de créer une nouvelle demande.",
-  "create.account.done": "Vous recevrez un courriel à l'adresse %s pour terminer le processus de création de votre compte. Vous aurez 15 minutes pour terminer le processus de création de votre compte.",
+  "create.account.alert.title": "Confirmation de votre compte",
+  "create.account.done": "Un e-mail a été envoyé à %s. Cliquez sur le lien qu’il contient pour finaliser la création de votre compte (valide pendant 15 minutes).",
   "Missing informations ...": "Informations manquantes ...",
   "password.match.error": "Vos mots de passe ne sont pas identiques !",
   "password.empty.error": "Votre mot de passe ne peut être vide",
