Feat#855/admin step account creation (#872)
* extract Form from admin step in its own step

* generify usage of processEditor for usage plan & tenant usage

* Add evolution to extract form step from admin steps

*  tenant account creation process can be setup

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -117,6 +117,7 @@
     "notif.new.published.post": "A new post has been published about API %s.",
     "notif.issues": "A new issue has been opened regarding API %s.",
     "notif.issues.comment": "A new comment has been added to an issue related to you.",
+    "notif.account.creation.attempt": "Registration request pending",
     "api.access.request": "You will send an access request to the API %s. For which team do you want to send the request?",
     "FreeWithoutQuotas": "Free without quotas",
     "FreeWithQuotas": "Free with quotas",
@@ -540,7 +541,8 @@
     "Confirm password": "Confirm password",
     "Create account": "Create account",
     "account.creation.error.not.valid.anymore": "Your account creation request is not valid anymore (it's only valid for 15 minutes). Please creates a new request.",
-    "create.account.done": "You will receive an email at %s to finish your account creation process. You will have 15 minutes from now to finish your account creation process.",
+    "create.account.alert.title": "Account confirmation required",
+    "create.account.done": "An email has been sent to %s to finish your account creation process. Follow the link inside to finish creating your account (valid for 15 minutes).",
     "Missing informations ...": "Missing informations ...",
     "password.match.error": "Your passwords does not match!",
     "password.empty.error": "Your password can't be empty",
@@ -1253,6 +1255,7 @@
     "subscription.process.creation.title": "Validation step creation",
     "subscription.process.type.selection": "Please select a type of validation",
     "subscription.process.team.admin": "Team admin",
+    "subscription.process.form": "Formulaire",
     "subscription.process.email": "Email",
     "subscription.process.add.label": "Add a new step",
     "subscription.process.httpRequest": "HTTP Request",
@@ -1646,8 +1649,21 @@
     "notifications.page.table.header.label.sender": "Sender",
     "notifications.page.table.header.label.date": "Date",
     "notifications.page.table.header.label.actions": "Actions",
+    "notifications.page.account.creation.attempt.detail.button.label": "Show more",
+    "notifications.page.account.creation.attempt.detail.modal.title": "Account creation attempt details",
     "tenant.edit.clientNamePattern.label": "Custom client name pattern",
     "tenant.edit.clientNamePattern.help": "This pattern is used to customize the client name when creating an API key. The string can include dynamic values using the ${my.value} syntax.",
-    "tenant.edit.clientNamePattern.help2": "The following values are available:"
-
+    "tenant.edit.clientNamePattern.help2": "The following values are available:",
+    "tenant.security.account.creation.process.button.label": "Customize the account creation process",
+    "tenant.security.account.creation.process.doc.title": "Account creation process configuration",
+    "tenant.security.account.creation.process.doc.intro": "Define the steps that make up the account creation process. You can add, remove, or reorder steps.",
+    "tenant.security.account.creation.process.doc.step.form": "Displays a configurable form to be filled out during the account request.",
+    "tenant.security.account.creation.process.doc.step.email": "Sends an email for validation. If the title contains \"confirmation\", the email is used to validate the address (${form.email} as recipient).",
+    "tenant.security.account.creation.process.doc.step.http": "Sends all contextual data to an external webhook for validation.",
+    "tenant.security.account.creation.process.doc.step.admin": "Notifies the tenant administrators for manual approval.",
+    "tenant.security.account.creation.process.doc.footer": "Use a default workflow",
+    "tenant.security.account.creation.process.doc.default.workflow": "form → confirmation mail",
+    "tenant.security.account.creation.process.doc.default.workflow.admin": "form → confirmation mail → admin validation",
+    "tenant.security.account.creation.process.doc.close.aria": "Close documentation",
+    "tenant.security.account.creation.process.doc.open.aria": "Show la documentation"
 }
