--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -117,6 +117,7 @@
   "notif.new.published.post": "Une nouvelle publication a été publié concernant l'API %s",
   "notif.issues": "Une nouvelle issue a été ouverte concernant l'API %s",
   "notif.issues.comment": "Un nouveau commentaire a été ajouté à une issue vous concernant.",
+  "notif.account.creation.attempt": "Demande d'inscription en attente",
   "api.access.request": "Vous allez envoyer une demande d'accès à l'API %s. Pour quelle équipe voulez-vous envoyer cette demande ?",
   "FreeWithoutQuotas": "Gratuit sans quotas",
   "FreeWithQuotas": "Gratuit avec quotas",
@@ -537,10 +538,11 @@
   "Private tenant": "Tenant privé",
   "tenant.created.success": "Le tenant %s a été créé avec succès",
   "Tenant updated successfully": "Le tenant a été modifié avec succès",
-  "Confirm password": "Mot de passe de confirmation",
+  "Confirm password": "Confirmation de mot de passe",
   "Create account": "Création d'un compte",
   "account.creation.error.not.valid.anymore": "Votre demande de création de compte n'est plus valide (elle n'est valable que pendant 15 minutes). Merci de créer une nouvelle demande.",
-  "create.account.done": "Vous recevrez un courriel à l'adresse %s pour terminer le processus de création de votre compte. Vous aurez 15 minutes pour terminer le processus de création de votre compte.",
+  "create.account.alert.title": "Confirmation de votre compte",
+  "create.account.done": "Un e-mail a été envoyé à %s. Cliquez sur le lien qu’il contient pour finaliser la création de votre compte (valide pendant 15 minutes).",
   "Missing informations ...": "Informations manquantes ...",
   "password.match.error": "Vos mots de passe ne sont pas identiques !",
   "password.empty.error": "Votre mot de passe ne peut être vide",
@@ -1252,6 +1254,7 @@
   "subscription.process.creation.title": "Création d'une étape de validation",
   "subscription.process.type.selection": "Merci de sélectionner un type de validation",
   "subscription.process.team.admin": "Admin. équipe",
+  "subscription.process.form": "Form",
   "subscription.process.email": "Courriel",
   "subscription.process.add.label": "Ajouter une nouvelle étape",
   "subscription.process.httpRequest": "Requête HTTP",
@@ -1611,6 +1614,7 @@
   "notifications.page.filters.type.TransferApiOwnership.label": "Transfert de propriété d'API",
   "notifications.page.filters.type.ApiSubscriptionTransferSuccess.label": "Transfert de souscription réussi",
   "notifications.page.filters.type.CheckoutForSubscription.label": "Paiement pour souscription",
+  "notifications.page.filters.type.AccountCreationAttempt.label": "Demande de création de compte",
   "notifications.page.filters.all.notifications.label": "Toutes",
   "notifications.page.filters.unread.notifications.label": "À traiter",
   "notifications.page.filters.clear.label": "Réinitialiser les filtres",
@@ -1646,7 +1650,21 @@
   "notifications.page.table.header.label.sender": "Source",
   "notifications.page.table.header.label.date": "Date",
   "notifications.page.table.header.label.actions": "Actions",
-  "tenant.edit.clientNamePattern.label": "Modèle de nom de client personnalisé",
+  "notifications.page.account.creation.attempt.detail.button.label": "Voir plus",
+  "notifications.page.account.creation.attempt.detail.modal.title": "Détail de la demande de création de compte",
+  "tenant.edit.clientNamePattern.label" : "Modèle de nom de client personnalisé",
   "tenant.edit.clientNamePattern.help": "Ce modèle est utilisé pour personnaliser le nom du client lors de la création d'une clé d'API. La chaîne de caractères peut contenir des valeurs dynamiques en utilisant la syntaxe ${ma.valeur}.",
-  "tenant.edit.clientNamePattern.help2": "Les valeurs disponibles sont les suivantes :"
+  "tenant.edit.clientNamePattern.help2": "Les valeurs disponibles sont les suivantes :",
+  "tenant.security.account.creation.process.button.label": "Personnaliser le processus de création de comptes",
+  "tenant.security.account.creation.process.doc.title": "Configuration du processus de création de compte",
+  "tenant.security.account.creation.process.doc.intro": "Définissez les étapes qui composent la création de compte utilisateur. Vous pouvez ajouter, supprimer ou réorganiser les étapes.",
+  "tenant.security.account.creation.process.doc.step.form": "affiche un formulaire paramétrable à remplir lors de la demande de compte.",
+  "tenant.security.account.creation.process.doc.step.email": "envoie un email pour validation. Si le titre contient \"confirmation\", l’email sert à valider l’adresse (${form.email} comme destinataire)",
+  "tenant.security.account.creation.process.doc.step.http": "envoie toutes les données contextuelles à un webhook externe pour validation",
+  "tenant.security.account.creation.process.doc.step.admin": "notifie les administrateurs du tenant pour une validation manuelle",
+  "tenant.security.account.creation.process.doc.footer": "Utiliser un workflow par défaut",
+  "tenant.security.account.creation.process.doc.default.workflow": "form → mail de confirmation",
+  "tenant.security.account.creation.process.doc.default.workflow.admin": "form → mail de confirmation → validation admin",
+  "tenant.security.account.creation.process.doc.close.aria": "Fermer la documentation",
+  "tenant.security.account.creation.process.doc.open.aria": "Voir la documentation"
 }
