FIX #875 - user can copy apikey as bearer token

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1439,6 +1439,9 @@
     "subscription.copy.token.label": "token",
     "subscription.copy.token.aria-label": "Copy the token to retrieve credentials by API",
     "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API",
+    "subscription.copy.bearer.token.label": "Bearer token",
+    "subscription.copy.bearer.token.aria.label": "Copy credentials as bearer token",
+    "subscription.copy.bearer.token.help": "Copy credentials as bearer token",
     "subscription.display.credentials": "Display credentials",
     "subscription.display.credentials.clientId": "Client ID",
     "subscription.display.credentials.clientSecret": "Client Secret",
