--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1438,6 +1438,9 @@
   "subscription.copy.token.label": "Jeton",
   "subscription.copy.token.aria.label": "Copier le jeton pour récupérer les secrets",
   "subscription.copy.token.help": "Copier le jeton Daikoku, utilisable pour récupérer les identifiants par API",
+  "subscription.copy.bearer.token.label": "jeton d’accès (Bearer)",
+  "subscription.copy.bearer.token.aria.label": "Copier les identifiants sous la forme d'un jeton d’accès (Bearer)",
+  "subscription.copy.bearer.token.help": "Copier les identifiants sous la forme d'un jeton d’accès (Bearer)",
   "subscription.display.credentials": "Afficher les identifiants",
   "subscription.display.credentials.clientId": "Client ID",
   "subscription.display.credentials.clientSecret": "Client Secret",
