--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1668,5 +1668,11 @@
     "tenant.security.account.creation.process.doc.default.workflow": "form → confirmation mail",
     "tenant.security.account.creation.process.doc.default.workflow.admin": "form → confirmation mail → admin validation",
     "tenant.security.account.creation.process.doc.close.aria": "Close documentation",
-    "tenant.security.account.creation.process.doc.open.aria": "Show la documentation"
+    "tenant.security.account.creation.process.doc.open.aria": "Show la documentation",
+    "tenant.settings.mailer.mailgun.test.recipient.email.label": "Recipient email (for test only)",
+    "tenant.settings.mailer.test.connection.button.label": "Test connection",
+    "tenant.settings.mailer.test.connection.success.label": "Test coonection succeeded",
+    "tenant.settings.mailer.test.connection.failed.label": "Test connection failed",
+    "tenant.settings.authProvider.oauth.fetch.configuration.button.label": "Get configuration",
+    "tenant.settings.authProvider.oauth.configuration.url.label": "URL of the OIDC config"
 }
