--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1305,6 +1305,9 @@
   "motivation.form.formatter.help": "une chaîne de caractères dans laquelle des mots entre « [[ ]] » seront remplacés par les valeurs correspondantes récupérées à partir des réponses fournies par l'utilisateur dans le formulaire et envoyé à l'administrateur pour validation.",
   "motivation.form.sample.help": "Utilisez le formulaire de test ci-dessous pour prévisualiser et valider vos paramètres de formatage (formater).",
   "motivation.form.sample.button.label": "Tester",
+  "motivation.form.formKeysToMetadata.title": "Métadonnées",
+  "motivation.form.formKeysToMetadata.label": "Champs utilisés comme métadonnées",
+  "motivation.form.formKeysToMetadata.help": "Sélectionnez les champs dont les valeurs seront transférées dans les métadonnées de la clé API.",
   "sub.meta.modal.admin.custom.name.label": "Nom personnalisé de la clé",
   "sub.meta.modal.admin.custom.name.help": "ce nom personnalisé ne sera visible que de l'équipe d'administration",
   "sub.meta.modal.valid.until.label": "Valide jusqu'à",
@@ -1658,6 +1661,7 @@
   "tenant.edit.clientNamePattern.label" : "Modèle de nom de client personnalisé",
   "tenant.edit.clientNamePattern.help": "Ce modèle est utilisé pour personnaliser le nom du client lors de la création d'une clé d'API. La chaîne de caractères peut contenir des valeurs dynamiques en utilisant la syntaxe ${ma.valeur}.",
   "tenant.edit.clientNamePattern.help2": "Les valeurs disponibles sont les suivantes :",
+  "tenant.security.account.creation.process.panel.title": "Processus de création de comptes",
   "tenant.security.account.creation.process.button.label": "Personnaliser le processus de création de comptes",
   "tenant.security.account.creation.process.doc.title": "Configuration du processus de création de compte",
   "tenant.security.account.creation.process.doc.intro": "Définissez les étapes qui composent la création de compte utilisateur. Vous pouvez ajouter, supprimer ou réorganiser les étapes.",
